kubernetes/apps/jellyfin/base/jellyfin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  selector:
    app.kubernetes.io/name: jellyfin
  # type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8096
      name: http
    - port: 8096
      targetPort: 8096
      name: http-8096
