kubernetes/apps/jellyfin/base/jellyfin-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: jellyfin
  # annotations:
    # konghq.com/protocols: https # Redirect always to https
    # konghq.com/https-redirect-status-code: "301"
spec:
  parentRefs:
    - name: kong
      namespace: gateway
  hostnames:
    - "jellyfin.example.com"
  rules:
    - matches:
      backendRefs:
        - name: jellyfin
          kind: Service
          port: 8096
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-path
  namespace: jellyfin
  annotations:
    konghq.com/strip-path: "true"
    # konghq.com/protocols: https # Redirect always to https
    # konghq.com/https-redirect-status-code: "301"
spec:
  parentRefs:
    - name: kong
      namespace: gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /jellyfin
      backendRefs:
        - name: jellyfin
          kind: Service
          port: 8096
